and order, are detected (i.e. tasks triggering off different upstream
tasks or running in different cycles).
The intention is to create a battery of automatic tests to make it
harder to break cylc in the future; and to make it easy for users with
complex suites to quickly verify, in dummy mode, that changes to cylc
will not break their suites. 

+ Suite definitions can now be reparsed at run time with the new "cylc
reload" command, even in tasks have been removed or added (in the later
case a specific instance of an added task will still have to be inserted
manually after the reload operation). This allows task settings
(environment variables etc.) to be changed without restarting the suite.

+ Higher-level family triggers (families of families) can now be used in
the graph.

+ Fixed a minor bug that could, in usual circumstances, cause cylc not
to recognize the need for another round of task processing and requiring
a manual nudge to get the suite to continue.

+ Documented stepped daily, monthly, and yearly cycling.

+ Added a simple utility command that generates random integers on a
given interval; used for computing random task run lengths in simulation
and dummy mode. 

+ Allow running simulation and dummy mode on the real time clock.

+ Bug fix: Sub-suites now load their own passphrase on start-up, not
that of their parent suite.

+ The gcontrol dot view now has hover-over task state information, and
right-click menus.

+ Added a new "environment scripting" task runtime configuration item.
In the task job script it fits between the cylc-defined environment 
and the task runtime environment.

+ External host selection officially supported (host = selector.sh).

+ The runahead limit base is now the oldest non-finished (i.e. not
succeeded or failed); it defaults to the twice the smallest cycling
interval in the suite; and it will not stall even if set to less than
the smallest cycling interval in the suite.
