@@ -296,6 +296,7 @@ task_commands['started'  ] = [ 'started', 'task-started' ]
 task_commands['message'  ] = [ 'message', 'task-message' ]
 task_commands['succeeded'] = [ 'succeeded', 'task-succeeded' ]
 task_commands['failed'   ] = [ 'failed', 'task-failed' ]
+task_commands['broadcast' ] = [ 'broadcast' ]
 
 all_commands = OrderedDict()
 for dct in [ 
@@ -481,6 +482,7 @@ comsum[ 'started'    ] = 'Acquire a task lock and report started'
 comsum[ 'message'    ] = 'Report progress and completion of outputs'
 comsum[ 'succeeded'  ] = 'Release task lock and report succeeded'
 comsum[ 'failed'     ] = 'Release task lock and report failure'
+comsum[ 'broadcast'  ] = 'Broadcast environment variables to other tasks'
 
 # utility
 comsum[ 'cycletime'    ] = 'Cycle time arithmetic and filename templating'
