@@ -85,7 +85,7 @@ the remote host before starting the suite."""
                 "cycle time even in a warm start (as for cold starts).",
                 action="store_true", default=False, dest="set_ict" )
 
-        self.parser.add_option( "-t", "--timeout", metavar='SEC',
+        self.parser.add_option( "--pyro-timeout", metavar='SEC',
                 help="Set a Pyro network connection timeout for tasks "
                 "submitted by the suite (this will override the suite "
                 "default if if one is configured).", action="store",
