@@ -1,0 +1,58 @@
+#!/usr/bin/env python
+
+#C: THIS FILE IS PART OF THE CYLC FORECAST SUITE METASCHEDULER.
+#C: Copyright (C) 2008-2012 Hilary Oliver, NIWA
+#C:
+#C: This program is free software: you can redistribute it and/or modify
+#C: it under the terms of the GNU General Public License as published by
+#C: the Free Software Foundation, either version 3 of the License, or
+#C: (at your option) any later version.
+#C:
+#C: This program is distributed in the hope that it will be useful,
+#C: but WITHOUT ANY WARRANTY; without even the implied warranty of
+#C: MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#C: GNU General Public License for more details.
+#C:
+#C: You should have received a copy of the GNU General Public License
+#C: along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+import Pyro.core
+from cycle_time import ct, CycleTimeError
+from copy import deepcopy
+#import logging
+
+class receiver( Pyro.core.ObjBase ):
+    """Receive broadcast variables from cylc clients."""
+
+    def __init__( self ):
+        self.targetted = {}  # targetted[ctime][var] = value
+        self.universal = {}  # universal[var] = value
+        Pyro.core.ObjBase.__init__(self)
+ 
+    def receive( self, varname, value, target=None ):
+        # currently target validity is checked by client
+        if not target:
+            self.universal[varname] = value
+        else:
+            if target not in self.targetted:
+                self.targetted[target] = {}
+            self.targetted[target][varname] = value
+
+    def expire( self, expire ):
+        newtarg = {}
+        for ctime in self.targetted:
+            if ctime < expire:
+                print 'RECEIVER: expiring', ctime
+            else:
+                newtarg[ctime] = self.targetted[ctime]
+        self.targetted = newtarg
+
+    def get( self, taskctime ):
+        vars = deepcopy( self.universal )
+        for ctime in self.targetted:
+            if taskctime != ctime:
+                continue
+            for var, val in self.targetted[ctime].items():
+                vars[ var ] = val
+        return vars
+
